Remove X-Powered-By header for IIS (Express)

--- a/src/Web/web.config
+++ b/src/Web/web.config
@@ -4,5 +4,10 @@
     <security>
       <requestFiltering removeServerHeader="true" />
     </security>
+    <httpProtocol>
+      <customHeaders>
+        <remove name="X-Powered-By" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
 </configuration>
