Add NuGet package for NetEscapades.AspNetCore.SecurityHeaders.TagHelpers

--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -30,7 +30,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>     
+    </PackageReference>
+    <PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders.TagHelpers" />     
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
   </ItemGroup>
   <ItemGroup>
